--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: chat-app-backend
     env: node
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: cd server && npm install
+    startCommand: cd server && node index.js
     envVars:
       MONGO_URI: "mongodb+srv://prasanna:user%40123@chat.utr8ma8.mongodb.net/?appName=chat"
       JWT_SECRET: "prassana123"
