--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,10 @@ services:
     buildCommand: cd server && npm install
     startCommand: cd server && node index.js
     envVars:
-      MONGO_URI: "mongodb+srv://prasanna:user%40123@chat.utr8ma8.mongodb.net/?appName=chat"
-      JWT_SECRET: "prassana123"
-      CLIENT_URL: "https://chats-app-nine.vercel.app/"
+      - key: MONGO_URI
+        value: "mongodb+srv://prasanna:user%40123@chat.utr8ma8.mongodb.net/?appName=chat"
+      - key: JWT_SECRET
+        value: "prassana123"
+      - key: CLIENT_URL
+        value: "https://chats-app-nine.vercel.app/"
     autoDeploy: true
