--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: chat-app-backend
     env: node
+    plan: free
     buildCommand: cd server && npm install
     startCommand: cd server && node index.js
     envVars:
