--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,10 @@
         {
             "source": "/api/(.*)",
             "destination": "https://chat-app-backend.onrender.com/api/$1"
-        }
-    ],
-    "redirects": [
+        },
         {
             "source": "/(.*)",
-            "destination": "/index.html",
-            "type": 200
+            "destination": "/index.html"
         }
     ],
     "buildCommand": "npm run build",
